day3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bggapping
  namespace: workshop02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: bgg-app-svc-v1
          servicePort: 80
      - path: /
        backend:
          serviceName: bgg-app-svc-v2
          servicePort: 8080
